install-pcf/aws/overrides/security_group_opsman_allow_override.tf
resource "aws_security_group" "directorSG" {
    ingress {
        from_port = 0
        to_port = 0
        protocol = -1
        cidr_blocks = ["${var.vpc_cidr}"]
    }
    ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["${var.opsman_allow_cidr}"]
    }
    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["${var.opsman_allow_cidr}"]
    }
}
